--- a/index.html
+++ b/index.html
@@ -3,17 +3,36 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Scarlet Macaw Remedies</title>
+  <meta name="description"
+    content="Scarlet Macaw Remedies - Your trusted partner in natural and holistic remedies for a healthier life." />
+  <meta name="keywords"
+    content="Scarlet Macaw Remedies, natural remedies, holistic health, wellness, organic products" />
+  <meta name="author" content="Scarlet Macaw Remedies" />
+  <meta property="og:title" content="Scarlet Macaw Remedies - Natural and Holistic Health" />
+  <meta property="og:description"
+    content="Explore our range of natural and holistic remedies to improve your health and wellness." />
+  <meta property="og:image" content="/logo.png" />
+  <meta property="og:url" content="https://www.scarletmacawremedies.com" />
+  <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Google fonts CDN -->
+  <link rel="icon" type="image/svg+xml" href="/logo.png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-
+  <title>Scarlet Macaw Remedies - Natural and Holistic Health</title>
 </head>
 
 <body>
-  <div id="root"></div>
+  <header>
+    <h1>Welcome to Scarlet Macaw Remedies</h1>
+    <p>Your trusted partner in natural and holistic remedies.</p>
+  </header>
+
+  <main id="root"></main>
+
+  <footer>
+    <p>&copy; 2024 Scarlet Macaw Remedies. All rights reserved.</p>
+  </footer>
+
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
