--- a/index.html
+++ b/index.html
@@ -22,16 +22,8 @@
 </head>
 
 <body>
-  <header>
-    <h1>Welcome to Scarlet Macaw Remedies</h1>
-    <p>Your trusted partner in natural and holistic remedies.</p>
-  </header>
 
-  <main id="root"></main>
-
-  <footer>
-    <p>&copy; 2024 Scarlet Macaw Remedies. All rights reserved.</p>
-  </footer>
+  <div id="root"></div>
 
   <script type="module" src="/src/main.jsx"></script>
 </body>
