--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <link rel="icon" type="image/svg+xml" href="/logo.png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <title>Scarlet Macaw Remedies - Natural and Holistic Health</title>
+  <title>Scarlet Macaw Remedies</title>
 </head>
 
 <body>
