--- a/index.html
+++ b/index.html
@@ -4,27 +4,65 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Basic SEO Meta Tags -->
   <meta name="description"
     content="Scarlet Macaw Remedies - Your trusted partner in natural and holistic remedies for a healthier life." />
   <meta name="keywords"
     content="Scarlet Macaw Remedies, natural remedies, holistic health, wellness, organic products" />
   <meta name="author" content="Scarlet Macaw Remedies" />
+
+  <!-- Open Graph Meta Tags for Social Sharing -->
   <meta property="og:title" content="Scarlet Macaw Remedies - Natural and Holistic Health" />
   <meta property="og:description"
     content="Explore our range of natural and holistic remedies to improve your health and wellness." />
-  <meta property="og:image" content="/logo.png" />
+  <meta property="og:image" content="https://www.scarletmacawremedies.com/logo.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="628" />
+  <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.scarletmacawremedies.com" />
-  <meta name="twitter:card" content="summary_large_image" />
 
-  <link rel="icon" type="image/svg+xml" href="/logo.png" />
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Scarlet Macaw Remedies - Natural and Holistic Health" />
+  <meta name="twitter:description"
+    content="Explore our range of natural and holistic remedies to improve your health and wellness." />
+  <meta name="twitter:image" content="https://www.scarletmacawremedies.com/logo.png" />
+
+  <!-- Favicon and Fonts -->
+  <link rel="icon" type="image/png" href="/logo.png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Title -->
   <title>Scarlet Macaw Remedies</title>
+
+  <!-- Schema.org Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Scarlet Macaw Remedies",
+    "url": "https://www.scarletmacawremedies.com",
+    "logo": "https://www.scarletmacawremedies.com/logo.png",
+    "description": "Your trusted partner in natural and holistic remedies for a healthier life.",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+1-800-555-5555",
+      "contactType": "Customer Service"
+    },
+    "sameAs": [
+      "https://www.facebook.com/ScarletMacawRemedies",
+      "https://www.instagram.com/ScarletMacawRemedies",
+      "https://www.linkedin.com/company/ScarletMacawRemedies"
+    ]
+  }
+  </script>
 </head>
 
 <body>
-
   <div id="root"></div>
 
+  <!-- React App Entry Point -->
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
