--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:title" content="Scarlet Macaw Remedies - Natural and Holistic Health" />
   <meta property="og:description"
     content="Explore our range of natural and holistic remedies to improve your health and wellness." />
-  <meta property="og:image" content="https://www.scarletmacawremedies.com/logo.png" />
+  <meta property="og:image" content="https://www.scarletmacawremedies.com/searchlogo.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="628" />
   <meta property="og:type" content="website" />
@@ -27,7 +27,7 @@
   <meta name="twitter:title" content="Scarlet Macaw Remedies - Natural and Holistic Health" />
   <meta name="twitter:description"
     content="Explore our range of natural and holistic remedies to improve your health and wellness." />
-  <meta name="twitter:image" content="https://www.scarletmacawremedies.com/logo.png" />
+  <meta name="twitter:image" content="https://www.scarletmacawremedies.com/searchlogo.png" />
 
   <!-- Favicon and Fonts -->
   <link rel="icon" type="image/png" href="/logo.png" />
