change logo.png to searchlogo.png in schema.org of index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     "@type": "Organization",
     "name": "Scarlet Macaw Remedies",
     "url": "https://www.scarletmacawremedies.com",
-    "logo": "https://www.scarletmacawremedies.com/logo.png",
+    "logo": "https://www.scarletmacawremedies.com/searchlogo.png",
     "description": "Your trusted partner in natural and holistic remedies for a healthier life.",
     "contactPoint": {
       "@type": "ContactPoint",
