--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <meta name="twitter:image" content="https://www.scarletmacawremedies.com/searchlogo.png" />
 
   <!-- Favicon and Fonts -->
-  <link rel="icon" type="image/png" href="/logo.png" />
+  <link rel="icon" type="image/png" href="/searchlogo.png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- Title -->
